# soroban-privacy-pools

./: .gitignore  Cargo.toml  Makefile  README.md  demo.sh
circom2soroban/: Cargo.toml
circom2soroban/src/: main.rs
circuits/: commitment.circom  dummy.circom  keccak256.circom  main.circom  merkleProof.circom  test_merkleProof.circom
circuits/test/: Cargo.toml  README.md  README_lean_imt_compatibility.md  compute_expected_root.js  package-lock.json  package.json  run_compatibility_test.sh  run_tests.sh  test_lean_imt_compatibility.rs  test_merkleProof.circom  test_merkleProof.js  test_poseidon.circom  test_poseidon_input.json
circuits/test/lean-imt-test/: Cargo.toml
circuits/test/lean-imt-test/src/: main.rs
circuits/test/merkle-test/: Cargo.toml
circuits/test/merkle-test/src/: main.rs
circuits/test/poseidon-test/: Cargo.toml
circuits/test/poseidon-test/src/: main.rs
circuits/test/src/: main.rs
cli/coinutils/src/crypto/: coin.rs
coinutils/: Cargo.toml
coinutils/src/: error.rs  main.rs
coinutils/src/crypto/: poseidon.rs
coinutils/src/merkle/: association.rs  withdrawal.rs
contract/: Cargo.toml
contract/src/: lib.rs  test.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/zk/: mod.rs  test.rs
contracts/privacy-pools/: Cargo.toml
contracts/privacy-pools/src/: lib.rs  test.rs
contracts/privacy-pools/src/zk/: mod.rs  test.rs
lean-imt/: Cargo.toml  README.md
lean-imt/src/: lib.rs  poseidon.rs  tests.rs
libs/lean-imt/src/: lib.rs
libs/zk/src/: lib.rs
poseidon/: Cargo.toml
poseidon/src/: lib.rs  test.rs
zk/: Cargo.toml
zk/src/: lib.rs  test.rs
