[package]
name = "coinutils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-sponge = "0.4.0-alpha"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dusk-poseidon = { version = "0.41", default-features = false }
dusk-bls12_381 = { version = "0.14", default-features = false }