[package]
name = "coinutils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poseidon = { path = "../poseidon" }
lean-imt = { path = "../lean-imt" }
soroban-sdk = { version = "23.0.0-rc.2.2", features = ["testutils"] }
num-bigint = "0.4"