[package]
name = "lean-imt"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
dusk-poseidon = { version = "0.41", default-features = false }
dusk-bls12_381 = { version = "0.14", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
