[package]
name = "lean-imt"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ark-bls12-381 = { version = "0.4", default-features = false, features = ["scalar_field"] }
ark-ff = { version = "0.4", default-features = false }
poseidon = { path = "../poseidon" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
