[package]
name = "circuit-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lean-imt = { path = "../../lean-imt" }
soroban-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "test_lean_imt_compatibility"
path = "test_lean_imt_compatibility.rs"
