[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-ec = { version = "0.4.2" }
