[package]
name = "privacy-pools"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
wee_alloc = "0.4.5"
zk = { path = "../../zk" }
lean-imt = { path = "../../lean-imt" }
ark-ff = { version = "0.4.2", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-ec = { version = "0.4.2" }
hex = { version = "0.4.3" }
