[package]
name = "merkleproof-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lean-imt = { path = "../../../lean-imt" }
soroban-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[[bin]]
name = "lean-imt-test"
path = "src/main.rs"
