[package]
name = "poseidon_compat_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_poseidon"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = "0.4"
ark-ff = "0.4"
poseidon = { path = "../../../poseidon" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
